--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!-- BEGIN MENUBAR-->
-<div id="menubar" class="menubar-inverse" style="width: 25%;">
+<div id="menubar" class="menubar-inverse" style="width: 33%;">
   <div class="menubar-fixed-panel">
     <div class="expanded">
       <!--<a href="../../html/dashboards/dashboard.html">-->
@@ -10,58 +10,43 @@
   <div class="menubar-scroll-panel">
 
     <!-- BEGIN MAIN MENU -->
-    <ul id="main-menu" class="gui-controls">
+    <ul id="main-menu" class="gui-controls" *ngIf="items">
 
-      <!-- BEGIN LEVELS -->
-      <li class="gui-folder">
+      <li class="gui-folder" *ngFor="let item of items">
         <a>
-          <div class="gui-icon"><i class="fa fa-folder-open fa-fw"></i></div>
-          <span class="title" style="font-size: 15px;">Menu levels demo</span>
+          <div class="gui-icon">
+            <i class="fa fa-folder-open fa-fw"></i>
+          </div>
+          <span class="title menu-label">{{item.name}}</span>
         </a>
-        <!--start submenu -->
-        <ul>
-          <li><a href="#"><span class="title">Item 1</span></a></li>
-          <li><a href="#"><span class="title">Item 1</span></a></li>
+        <ul *ngFor="let phase of item.children">
           <li class="gui-folder">
-            <a href="javascript:void(0);">
-              <span class="title">Open level 2</span>
-            </a>
-            <!--start submenu -->
-            <ul>
-              <li><a href="#"><span class="title">Item 2</span></a></li>
+            <a>
+              <i class="fa fa-folder-open"></i>
+              <span class="menu-label">{{phase.name}}</span></a>
+
+            <ul *ngFor="let design of phase.children">
               <li class="gui-folder">
-                <a href="javascript:void(0);">
-                  <span class="title">Open level 3</span>
+                <a href="#">
+                  <i class="fa fa-folder-open fa-fw"></i>
+                  <span class="menu-label">{{design.name}}</span>
                 </a>
-                <!--start submenu -->
-                <ul>
-                  <li><a href="#"><span class="title">Item 3</span></a></li>
-                  <li><a href="#"><span class="title">Item 3</span></a></li>
+
+                <ul *ngFor="let spec of design.children">
                   <li class="gui-folder">
-                    <a href="javascript:void(0);">
-                      <span class="title">Open level 4</span>
+                    <a href="#">
+                      <i class="fa fa-folder-open fa-fw"></i>
+                      <span class="menu-label">{{spec.name}}</span>
                     </a>
-                    <!--start submenu -->
-                    <ul>
-                      <li><a href="#"><span class="title">Item 4</span></a></li>
-                      <li class="gui-folder">
-                        <a href="javascript:void(0);">
-                          <span class="title">Open level 5</span>
-                        </a>
-                        <!--start submenu -->
-                        <ul>
-                          <li><a href="#"><span class="title">Item 5</span></a></li>
-                          <li><a href="#"><span class="title">Item 5</span></a></li>
-                        </ul><!--end /submenu -->
-                      </li><!--end /submenu-li -->
-                    </ul><!--end /submenu -->
-                  </li><!--end /submenu-li -->
-                </ul><!--end /submenu -->
-              </li><!--end /submenu-li -->
-            </ul><!--end /submenu -->
-          </li><!--end /submenu-li -->
-        </ul><!--end /submenu -->
-      </li><!--end /menu-li -->
+                  </li>
+                </ul>
+              </li>
+
+            </ul>
+          </li>
+        </ul>
+      </li>
+
       <!-- END LEVELS -->
 
     </ul><!--end .main-menu -->
@@ -72,6 +57,7 @@
         <span class="opacity-75">Copyright &copy; 2014</span> <strong>CodeCovers</strong>
       </small>
     </div>
+
   </div><!--end .menubar-scroll-panel-->
 </div><!--end #menubar-->
 <!-- END MENUBAR -->
