context menu is working, starting to work with the filter offcanvas

--- a/kontext/src/app/header/header.component.html
+++ b/kontext/src/app/header/header.component.html
@@ -25,6 +25,14 @@
             <button type="submit" class="btn btn-icon-toggle ink-reaction"><i class="fa fa-search"></i></button>
           </form>
         </li>
+         <li>
+          <!-- Filter Toggle-->
+          <form class="navbar-item">
+            <button type="submit" class="btn btn-icon-toggle ink-reaction">
+              <i class="fa fa-filter fa-2x" style="color:#c60000"></i>
+            </button>
+          </form>
+        </li>
       </ul>
       <ul class="header-nav header-nav-profile">
         <li class="dropdown">
