--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!-- BEGIN MENUBAR-->
-<div id="menubar" class="menubar-inverse" style="width: 33%;">
+<div id="menubar" class="menubar-inverse" style="width: 25%;">
   <div class="menubar-fixed-panel">
     <div class="expanded">
       <!--<a href="../../html/dashboards/dashboard.html">-->
@@ -12,31 +12,35 @@
     <!-- BEGIN MAIN MENU -->
     <ul id="main-menu" class="gui-controls" *ngIf="items">
 
-      <li class="gui-folder" *ngFor="let item of items">
-        <a>
+      <li class="gui-folder" *ngFor="let item of items" [contextMenu]="projectMenu">
+        <a class="menu-item">
           <div class="gui-icon">
             <i class="fa fa-folder-open fa-fw"></i>
           </div>
           <span class="title menu-label">{{item.name}}</span>
         </a>
-        <ul *ngFor="let phase of item.children">
-          <li class="gui-folder">
-            <a>
-              <i class="fa fa-folder-open"></i>
-              <span class="menu-label">{{phase.name}}</span></a>
 
-            <ul *ngFor="let design of phase.children">
+        <!-- context menu for projects -->
+
+
+        <ul *ngFor="let phase of item.children">
+          <li class="gui-folder" [contextMenu]="phaseMenu">
+            <a class="menu-item">
+              <!--<i class="fa fa-folder-open"></i>-->
+              <span class="title menu-label">{{phase.name}}</span></a>
+
+            <ul *ngFor="let design of phase.children" [contextMenu]="designMenu">
               <li class="gui-folder">
-                <a href="#">
-                  <i class="fa fa-folder-open fa-fw"></i>
-                  <span class="menu-label">{{design.name}}</span>
+                <a class="menu-item">
+                  <!--<i class="fa fa-folder-open fa-fw"></i>-->
+                  <span class="title menu-label">{{design.name}}</span>
                 </a>
 
-                <ul *ngFor="let spec of design.children">
+                <ul *ngFor="let spec of design.children" [contextMenu]="specMenu">
                   <li class="gui-folder">
-                    <a href="#">
-                      <i class="fa fa-folder-open fa-fw"></i>
-                      <span class="menu-label">{{spec.name}}</span>
+                    <a href="javascript:void(0)">
+                      <!--<i class="fa fa-folder-open fa-fw"></i>-->
+                      <span class="title menu-label">{{spec.name}}</span>
                     </a>
                   </li>
                 </ul>
@@ -51,6 +55,146 @@
 
     </ul><!--end .main-menu -->
     <!-- END MAIN MENU -->
+
+    <!--CONTEXT MENUS -->
+    <context-menu #projectMenu
+                      (close)="showMessage('closed static', $event)"
+                      (open)="showMessage('open', $event)">
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Expanding Project')">
+            <i class="fa fa-expand">&nbsp;</i> Expand
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Edit Project')">
+            <i class="fa fa-edit">&nbsp;</i> Edit
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Delete Project')">
+            <i class="fa fa-trash">&nbsp;</i> Delete
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Copy Project')">
+            <i class="fa fa-copy">&nbsp;</i> Copy
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Create Phase')">
+            <i class="fa fa-plus">&nbsp;</i> Create Phase
+          </ng-template>
+        </context-menu>
+    <context-menu #phaseMenu
+                      (close)="showMessage('closed static', $event)"
+                      (open)="showMessage('open', $event)">
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Expanding Project')">
+            <i class="fa fa-expand">&nbsp;</i> Expand
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Edit Project')">
+            <i class="fa fa-edit">&nbsp;</i> Edit
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Delete Project')">
+            <i class="fa fa-trash">&nbsp;</i> Delete
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Copy Project')">
+            <i class="fa fa-copy">&nbsp;</i> Copy
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Create Phase')">
+            <i class="fa fa-plus">&nbsp;</i> Create Design
+          </ng-template>
+        </context-menu>
+    <context-menu #designMenu
+                      (close)="showMessage('closed static', $event)"
+                      (open)="showMessage('open', $event)">
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Expanding Project')">
+            <i class="fa fa-expand">&nbsp;</i> Expand
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Edit Project')">
+            <i class="fa fa-edit">&nbsp;</i> Edit
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Delete Project')">
+            <i class="fa fa-trash">&nbsp;</i> Delete
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Copy Project')">
+            <i class="fa fa-copy">&nbsp;</i> Copy
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Create Phase')">
+            <i class="fa fa-plus">&nbsp;</i> Create Spec
+          </ng-template>
+        </context-menu>
+    <context-menu #specMenu
+                      (close)="showMessage('closed static', $event)"
+                      (open)="showMessage('open', $event)">
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Expand Spec')">
+            <i class="fa fa-expand">&nbsp;</i> Expand
+          </ng-template>
+          <ng-template contextMenuItem [divider]="true"></ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Edit Spec')">
+            <i class="fa fa-edit">&nbsp;</i> Edit
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Delete Spec')">
+            <i class="fa fa-trash">&nbsp;</i> Delete
+          </ng-template>
+          <ng-template contextMenuItem
+                       [visible]="true"
+                       [enabled]="true"
+                       (execute)="showMessage('Copy Spec')">
+            <i class="fa fa-copy">&nbsp;</i> Copy
+          </ng-template>
+
+        </context-menu>
 
     <div class="menubar-foot-panel">
       <small class="no-linebreak hidden-folded">
