--- a/kontext/src/assets/css/theme-5/materialadmin.css
+++ b/kontext/src/assets/css/theme-5/materialadmin.css
@@ -1523,7 +1523,8 @@ a.text-success:hover {
 }
 #menubar {
   position: fixed;
-  z-index: 1004;
+  /*z-index: 1004;*/
+  z-index: 2;
   left: 0;
   top: 64px;
   bottom: 0;
@@ -1531,7 +1532,8 @@ a.text-success:hover {
   color: rgba(12, 12, 12, 0.85);
 }
 .menubar-first #menubar {
-  z-index: 1006;
+  /*z-index: 1006;*/
+  z-index: 2;
 }
 #menubar:before {
   content: '';
@@ -1549,7 +1551,8 @@ a.text-success:hover {
   outline: none;
 }
 #menubar .nano-pane {
-  z-index: 2;
+  /*z-index: 2;*/
+  z-index: 1;
   width: 5px;
   background: transparent;
 }
@@ -1559,7 +1562,8 @@ a.text-success:hover {
 #menubar .menubar-scroll-panel {
   position: relative;
   padding-top: 16px;
-  z-index: 2;
+  /*z-index: 2;*/
+  z-index: 1;
   min-height: 100%;
 }
 #menubar .menubar-foot-panel {
@@ -1588,7 +1592,8 @@ body:not(.header-fixed) #menubar,
   display: inline-table;
   width: 100%;
   height: 64px;
-  z-index: 10;
+  /*z-index: 10;*/
+  z-index: 1;
   border-bottom: 1px solid rgba(12, 12, 12, 0.07);
 }
 .menubar-fixed-panel > div {
@@ -1644,7 +1649,8 @@ body:not(.menubar-first) .menubar-fixed-panel {
 @media (max-width: 768px) {
   #menubar {
     width: 240px;
-    z-index: 1013;
+    /*z-index: 1013;*/
+    z-index: 1;
     -webkit-transform: translate(-250px, 0);
     -ms-transform: translate(-250px, 0);
     -o-transform: translate(-250px, 0);
