context menu is working, starting to work with the filter offcanvas

--- a/kontext/src/app/base/base.component.html
+++ b/kontext/src/app/base/base.component.html
@@ -1,6 +1,17 @@
 <div id="base">
 
+  <!-- BEGIN OFFCANVAS LEFT -->
+  <app-help></app-help>
+
+  <!-- BEGIN MENUBAR-->
   <app-menu></app-menu>
+
+
+  <!-- BEGIN CONTENT-->
   <app-content></app-content>
 
-</div><!--end #base-->
+  <!-- BEGIN OFFCANVAS RIGHT -->
+  <app-filter></app-filter>
+
+
+</div>
