--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -199,12 +199,13 @@
 
     <div class="menubar-foot-panel">
       <div style="text-align: center">
-        <button class="btn btn-icon-toggle ink-reaction" (click)="paginateMenu(2)"><i class="fa fa-angle-double-left fa-2x"></i></button>
-        <button class="btn btn-icon-toggle ink-reaction" (click)="paginateMenu(1)"><i class="fa fa-angle-left fa-2x"></i></button>
-        <span style="font-size: 20px; vertical-align: bottom; color: white;">1</span>
-        <button class="btn btn-icon-toggle ink-reaction" (click)="paginateMenu(2)"><i class="fa fa-angle-right fa-2x"></i></button>
-        <button class="btn btn-icon-toggle ink-reaction" (click)="paginateMenu(2)"><i class="fa fa-angle-double-right fa-2x"></i></button>
+        <button *ngIf="page.double_prev" class="btn btn-icon-toggle ink-reaction" (click)="fetchItems(1)"><i class="fa fa-angle-double-left fa-2x"></i></button>
+        <button *ngIf="page.prev" class="btn btn-icon-toggle ink-reaction" (click)="fetchItems(page.page -1)"><i class="fa fa-angle-left fa-2x"></i></button>
+        <span style="font-size: 20px; vertical-align: bottom; color: white;">{{page.page}}</span>
+        <button *ngIf="page.next" class="btn btn-icon-toggle ink-reaction" (click)="fetchItems(page.page +1)"><i class="fa fa-angle-right fa-2x"></i></button>
+        <button *ngIf="page.double_next" class="btn btn-icon-toggle ink-reaction" (click)="fetchItems(paginationHeaders.xTotalPages)"><i class="fa fa-angle-double-right fa-2x"></i></button>
       </div>
+
       <br>
       <hr>
       <small class="no-linebreak hidden-folded">
