linked filtering against KTEK's api is working in the filter form, still need to connect it to the menu tree

--- a/kontext/src/app/base/base.component.html
+++ b/kontext/src/app/base/base.component.html
@@ -7,11 +7,9 @@
   <app-menu></app-menu>
 
 
-  <!-- BEGIN CONTENT-->
+  <!-- BEGIN CONTENT & OFF-CANVAS FILTER HTML-->
   <app-content></app-content>
 
-  <!-- BEGIN OFFCANVAS RIGHT -->
-  <app-filter></app-filter>
 
 
 </div>
