--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -55,20 +55,7 @@
       </div>
     </div>
     <div class="offcanvas-body">
-      <p>
-        An off-canvas can hold any content you want.
-      </p>
-      <p>
-        Close this off-canvas by clicking on the backdrop or press the close button in the upper right corner.
-      </p>
-      <p>&nbsp;</p>
-      <h4>Some details</h4>
-      <ul class="list-divided">
-        <li><strong>Width</strong><br/><span class="opacity-75">240px</span></li>
-        <li><strong>Height</strong><br/><span class="opacity-75">100%</span></li>
-        <li><strong>Body scroll</strong><br/><span class="opacity-75">disabled</span></li>
-        <li><strong>Background color</strong><br/><span class="opacity-75">Default</span></li>
-      </ul>
+      <app-filter></app-filter>
     </div>
   </div>
 </div>
