--- a/kontext/src/app/filter/filter.component.html
+++ b/kontext/src/app/filter/filter.component.html
@@ -1,34 +1,51 @@
-<!-- BEGIN OFFCANVAS RIGHT -->
-<div class="offcanvas">
-
-  <!-- BEGIN OFFCANVAS DEMO RIGHT -->
-				<div id="offcanvas-right" class="offcanvas-pane width-6">
-					<div class="offcanvas-head">
-						<header>Right off-canvas</header>
-						<div class="offcanvas-tools">
-							<a class="btn btn-icon-toggle btn-default-light pull-right" data-dismiss="offcanvas">
-								<i class="md md-close"></i>
-							</a>
-						</div>
-					</div>
-					<div class="offcanvas-body">
-						<p>
-							An off-canvas can hold any content you want.
-						</p>
-						<p>
-							Close this off-canvas by clicking on the backdrop or press the close button in the upper right corner.
-						</p>
-						<p>&nbsp;</p>
-						<h4>Some details</h4>
-						<ul class="list-divided">
-							<li><strong>Width</strong><br/><span class="opacity-75">240px</span></li>
-							<li><strong>Height</strong><br/><span class="opacity-75">100%</span></li>
-							<li><strong>Body scroll</strong><br/><span class="opacity-75">disabled</span></li>
-							<li><strong>Background color</strong><br/><span class="opacity-75">Default</span></li>
-						</ul>
-					</div>
-				</div>
-				<!-- END OFFCANVAS DEMO RIGHT -->
-
-</div><!--end .offcanvas-->
-<!-- END OFFCANVAS RIGHT -->
+<form class="form" role="form">
+  <div class="form-group floating-label">
+    <select id="select0" name="select2" (change)="updateBySelectedUser($event.target.value)" class="form-control">
+      <option value="">&nbsp;</option>
+      <option *ngFor="let user of users" [value]="user.id">{{user.username}}</option>
+    </select>
+    <label for="select0">Users</label>
+  </div>
+  <div class="form-group floating-label">
+    <select id="select1" name="select2" class="form-control" (change)="updateBySelectedProject($event.target.value)">
+      <option value="" >&nbsp;</option>
+      <optgroup label="Project Owner" *ngIf="selectedUser">
+        <option *ngFor="let project of isProjectOwner(selectedUser)" [value]="project.id">
+          {{project.name}}
+        </option>
+      </optgroup>
+      <optgroup label="Project Member" *ngIf="selectedUser">
+        <option *ngFor="let project of isProjectMember(selectedUser)" [value]="project.id">
+          {{project.name}}
+        </option>
+      </optgroup>
+      <optgroup label="All Projects" *ngIf="!selectedUser">
+        <option *ngFor="let project of projects" [value]="project.id">
+          {{project.name}}
+        </option>
+      </optgroup>
+    </select>
+    <label for="select1">Project</label>
+  </div>
+  <div class="form-group floating-label">
+    <select id="select2" name="select2" class="form-control">
+      <option value="">&nbsp;</option>
+      <option *ngFor="let phase of phases" [value]="phase.id">{{phase.name}}</option>
+    </select>
+    <label for="select2">Phase</label>
+  </div>
+  <div class="form-group floating-label">
+    <select id="select3" name="select3" class="form-control">
+      <option value="">&nbsp;</option>
+      <option *ngFor="let size of sizes" [value]="size.id">{{size.size}}</option>
+    </select>
+    <label for="select3">Size</label>
+  </div>
+  <div class="form-group floating-label">
+    <select id="select4" name="select4" class="form-control">
+      <option value="">&nbsp;</option>
+      <option *ngFor="let line of lines" [value]="line.id">{{line.name}}</option>
+    </select>
+    <label for="select4">Tire Line</label>
+  </div>
+</form>
