--- a/kontext/src/app/filter/filter.component.html
+++ b/kontext/src/app/filter/filter.component.html
@@ -1,13 +1,13 @@
 <form class="form" role="form">
-  <div class="form-group floating-label">
-    <select id="select0" name="select2" (change)="updateBySelectedUser($event.target.value)" class="form-control">
+  <div class="form-group">
+    <select id="select0" name="select2" (change)="updateBySelected('user', $event.target.value);" class="form-control">
       <option value="">&nbsp;</option>
       <option *ngFor="let user of users" [value]="user.id">{{user.username}}</option>
     </select>
     <label for="select0">Users</label>
   </div>
-  <div class="form-group floating-label">
-    <select id="select1" name="select2" class="form-control" (change)="updateBySelectedProject($event.target.value)">
+  <div class="form-group">
+    <select id="select1" name="select2" class="form-control" (change)="updateBySelected('project', $event.target.value);">
       <option value="" >&nbsp;</option>
       <optgroup label="Project Owner" *ngIf="selectedUser">
         <option *ngFor="let project of isProjectOwner(selectedUser)" [value]="project.id">
@@ -27,22 +27,22 @@
     </select>
     <label for="select1">Project</label>
   </div>
-  <div class="form-group floating-label">
-    <select id="select2" name="select2" class="form-control">
+  <div class="form-group">
+    <select id="select2" name="select2" class="form-control" (change)="updateBySelected('phase', $event.target.value);">
       <option value="">&nbsp;</option>
       <option *ngFor="let phase of phases" [value]="phase.id">{{phase.name}}</option>
     </select>
     <label for="select2">Phase</label>
   </div>
-  <div class="form-group floating-label">
-    <select id="select3" name="select3" class="form-control">
+  <div class="form-group">
+    <select id="select3" name="select3" class="form-control" (change)="updateBySelected('size', $event.target.value);">
       <option value="">&nbsp;</option>
       <option *ngFor="let size of sizes" [value]="size.id">{{size.size}}</option>
     </select>
     <label for="select3">Size</label>
   </div>
-  <div class="form-group floating-label">
-    <select id="select4" name="select4" class="form-control">
+  <div class="form-group">
+    <select id="select4" name="select4" class="form-control" (change)="updateBySelected('line', $event.target.value);">
       <option value="">&nbsp;</option>
       <option *ngFor="let line of lines" [value]="line.id">{{line.name}}</option>
     </select>
