--- a/kontext/src/app/filter/filter.component.html
+++ b/kontext/src/app/filter/filter.component.html
@@ -48,4 +48,10 @@
     </select>
     <label for="select4">Tire Line</label>
   </div>
+  <div class="form-group">
+    <div class="col-xs-6"><button class="btn btn-block ink-reaction btn-primary-light">Cancel</button></div>
+    <div class="col-xs-6"><button (click)="filterMenu()" class="btn btn-block ink-reaction btn-accent-light">Go!</button></div>
+
+
+  </div>
 </form>
