need to -> show that filter is active/inactive, expand to filtered level, turn pagination back on & fix look/feel, add page contents, expand-all, gather details on page when item is clicked, with clever loading

--- a/kontext/src/app/filter/filter.component.html
+++ b/kontext/src/app/filter/filter.component.html
@@ -49,8 +49,8 @@
     <label for="select4">Tire Line</label>
   </div>
   <div class="form-group">
-    <div class="col-xs-6"><button class="btn btn-block ink-reaction btn-primary-light">Cancel</button></div>
-    <div class="col-xs-6"><button (click)="filterMenu()" class="btn btn-block ink-reaction btn-accent-light">Go!</button></div>
+    <div class="col-xs-6"><button class="btn btn-block ink-reaction btn-primary-light" data-dismiss="offcanvas">Cancel</button></div>
+    <div class="col-xs-6"><button (click)="filterMenu()" class="btn btn-block ink-reaction btn-accent-light" data-dismiss="offcanvas">Go!</button></div>
 
 
   </div>
