just before implementing mat-tree in the app-menu component.

--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -1,45 +1,46 @@
 <!-- BEGIN CONTENT-->
 <div id="content">
-  <section class="col-xs-10 col-xs-offset-2">
-    <div class="section-header">
-      <ol class="breadcrumb">
-        <li class="active">Off-canvas</li>
-      </ol>
-    </div>
-    <div class="section-body contain-lg">
+  <!--<section class="col-xs-10 col-xs-offset-2">-->
+    <!--<div class="section-header">-->
+      <!--<ol class="breadcrumb">-->
+        <!--<li class="active">Off-canvas</li>-->
+      <!--</ol>-->
+    <!--</div>-->
+    <!--<div class="section-body contain-lg">-->
 
-      <!-- BEGIN POSITIONING -->
-      <div class="row">
-        <div class="col-lg-12">
-          <h4>Positioning</h4>
-        </div><!--end .col -->
-        <div class="col-lg-3 col-md-4">
-          <article class="margin-bottom-xxl">
-            <p>
-              You can place an off-canvas either on the left or the right side off the screen.
-            </p>
-          </article>
-        </div><!--end .col -->
-        <div class="col-lg-offset-1 col-md-8">
-          <div class="card">
-            <div class="card-body">
-              <a class="btn btn-raised ink-reaction btn-default-bright" href="#offcanvas-left" data-toggle="offcanvas">
-                <i class="md md-arrow-back"></i>
-                Open left off-canvas
-              </a>
-              <a class="btn btn-raised ink-reaction btn-default-bright pull-right" href="#offcanvas-right" data-toggle="offcanvas">
-                Open right off-canvas
-                <i class="md md-arrow-forward"></i>
-              </a>
-            </div><!--end .card-body -->
-          </div><!--end .card -->
-        </div><!--end .col -->
-      </div><!--end .row -->
-      <!-- END POSITIONING -->
-
-
-    </div><!--end .section-body -->
-  </section>
+      <!--&lt;!&ndash; BEGIN POSITIONING &ndash;&gt;-->
+      <!--<div class="row">-->
+        <!--<div class="col-lg-12">-->
+          <!--<h4>Positioning</h4>-->
+        <!--</div>&lt;!&ndash;end .col &ndash;&gt;-->
+        <!--<div class="col-lg-3 col-md-4">-->
+          <!--<article class="margin-bottom-xxl">-->
+            <!--<p>-->
+              <!--You can place an off-canvas either on the left or the right side off the screen.-->
+            <!--</p>-->
+          <!--</article>-->
+        <!--</div>&lt;!&ndash;end .col &ndash;&gt;-->
+        <!--<div class="col-lg-offset-1 col-md-8">-->
+          <!--<div class="card">-->
+            <!--<div class="card-body">-->
+              <!--<a class="btn btn-raised ink-reaction btn-default-bright" href="#offcanvas-left" data-toggle="offcanvas">-->
+                <!--<i class="md md-arrow-back"></i>-->
+                <!--Open left off-canvas-->
+              <!--</a>-->
+              <!--<a class="btn btn-raised ink-reaction btn-default-bright pull-right" href="#offcanvas-right" data-toggle="offcanvas">-->
+                <!--Open right off-canvas-->
+                <!--<i class="md md-arrow-forward"></i>-->
+              <!--</a>-->
+            <!--</div>&lt;!&ndash;end .card-body &ndash;&gt;-->
+          <!--</div>&lt;!&ndash;end .card &ndash;&gt;-->
+        <!--</div>&lt;!&ndash;end .col &ndash;&gt;-->
+      <!--</div>&lt;!&ndash;end .row &ndash;&gt;-->
+      <!--&lt;!&ndash; END POSITIONING &ndash;&gt;-->
+    <!--</div>&lt;!&ndash;end .section-body &ndash;&gt;-->
+  <!--</section>-->
+  <div class="container">
+    <app-tree-example></app-tree-example>
+  </div>
 </div><!--end #content-->
 <!-- END CONTENT -->
 
